--- a/css/index.css
+++ b/css/index.css
@@ -86,12 +86,12 @@ background: #55ACEE;
 color: white;
 }
 
-.fa-youtube {
+.fa-tienda {
   background: #bb0000;
   color: white;
 }
 
-.fa-instagram {
-background: #125688;
+.fa-discord {
+background: #424574;
 color: white;
 }
